Bug 153161 - FILESAVE: Data cannot save successfully if I open an old presentation, add some text in it, save it and close it.
Summary: FILESAVE: Data cannot save successfully if I open an old presentation, add so...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.7.2 release
Hardware: x86-64 (AMD64) All
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.1 target:7.4....
Keywords: bibisected, bisected, dataLoss, regression
: 153265 157567 157823 160966 161089 (view as bug list)
Depends on:
Blocks: Textbox
  Show dependency treegraph
 
Reported: 2023-01-23 13:12 UTC by hellojolla
Modified: 2025-01-15 08:04 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
This is an old odp file, and new words added to it cannot save successfully in 7.4.3. (36.34 KB, application/vnd.oasis.opendocument.presentation)
2023-01-23 13:21 UTC, hellojolla
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hellojolla 2023-01-23 13:12:07 UTC
Description:
I updated libreoffice from 7.4.1 to 7.4.3 before several weeks.But I found an issue when using impress: I opened one of some old odp files,added some words in it,saved it, closed it, reopened the saved odp file, and the words which were added disappeared! I suspected words data cannot really saved successfully in the new version 7.4.3.
I downgraded to the version 7.4.1, did the same actions, and the words which were added were still in the saved odp file.

Steps to Reproduce:
1.Open one of some old odp files that are attached to bugzilla.
2.Add some words in last textbox in it,sav it, and close it
3.reopen the saved odp file, and the words which are added disappear!

Actual Results:
The words which were added disappeared! I suspected words data cannot really saved successfully in the new version 7.4.3.

Expected Results:
The added words should save successfully.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.4.3.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
7.4.3-3
Calc: threaded
Comment 1 hellojolla 2023-01-23 13:21:07 UTC
Created attachment 184846 [details]
This is an old odp file, and new words added to it cannot save successfully in 7.4.3.

This is an old odp file, and new words added to it cannot save successfully in impress 7.4.3.
Comment 2 hellojolla 2023-01-23 13:33:31 UTC
When using impress operate the old odp file  in 7.4.1 and earlier versions, the new words can save successfully, and everything is OK.
Comment 3 hellojolla 2023-01-23 14:42:16 UTC
PS:My OS is Manjaro Linux 22.0.0, Sikaris.
Comment 4 stragu 2023-01-23 14:42:35 UTC
Thank you!

Steps:
1. Open attachment 184846 [details]
2. Add words at the end of text box, like " extra words"
3. File > Save as...
4. Reload

Extra string disappears. Same if saving as PPTX.

Reproduced in 7.4.4:

Version: 7.4.4.2 / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But also in 7.3:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And a recent master build:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cd20a17ab703e97191b4e3421527267ef82a704f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced in 7.2, so it's a regression.

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 5 stragu 2023-01-24 14:27:03 UTC
Reproduced on Windows 10 too:

Version: 7.5.0.2 (X86_64) / LibreOffice Community
Build ID: c0dd1bc3f1a385d110b88e26ece634da94921f58
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded

Bibisected with linux-64-7.3 repo to first bad commit 2be09a630478d983552d45c528a40e9113da0796 which points to core commit:

commit d194474aabd699806cb3631bc8641dd0548b8026	[log]
author	Mike Kaganski <mike.kaganski@collabora.com>	Wed Sep 21 11:11:47 2022 +0300
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Thu Sep 22 13:21:33 2022 +0200
tree 99434055a8224674e470ce49e89cc8112c4f9303
parent 84210c97d3d41f50f82d1b0747020283c844c808 [diff]
tdf#151100: xText->getString() may be empty for content needing export
[...]
Change-Id: I709a7b4c5ac1cc0621d3a1b18f2eb74feb987efb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140313

Mike, can you please have a look?
Comment 6 Mike Kaganski 2023-01-24 22:42:35 UTC
https://gerrit.libreoffice.org/c/core/+/146106
Comment 7 Commit Notification 2023-01-25 07:26:06 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d183daea1abbd7b564d083298874dd7c40d5a5b3

tdf#153161: (Ab)use a call to XTextRange::getString to flush edits

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 hellojolla 2023-01-25 08:25:11 UTC
@Mike  Thank you!
Comment 9 Commit Notification 2023-01-25 11:17:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/8a53a45dfc6fb126ef4e60038df385a2b72effd9

tdf#153161: (Ab)use a call to XTextRange::getString to flush edits

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-01-25 11:17:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f41a88a32dba9e0e3f7c88b99bccc62c031bf4f3

tdf#153161: (Ab)use a call to XTextRange::getString to flush edits

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-01-25 13:55:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-0":

https://git.libreoffice.org/core/commit/2814b7020bec3ce19d7d637ccd622e9cc6e6753f

tdf#153161: (Ab)use a call to XTextRange::getString to flush edits

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-01-26 10:38:46 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40d76def20bc3ae5ab7db88fef2688ce1664fa15

tdf#153161: sd: move UItest to CppUnittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2023-01-27 14:07:35 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard
Comment 14 stragu 2023-01-29 22:22:29 UTC
*** Bug 153265 has been marked as a duplicate of this bug. ***
Comment 15 stragu 2023-10-04 20:34:20 UTC
*** Bug 157567 has been marked as a duplicate of this bug. ***
Comment 16 Mike Kaganski 2023-11-08 10:56:22 UTC
*** Bug 157823 has been marked as a duplicate of this bug. ***
Comment 17 stragu 2024-05-08 16:18:33 UTC
*** Bug 160966 has been marked as a duplicate of this bug. ***
Comment 18 stragu 2024-05-17 00:37:55 UTC
*** Bug 161089 has been marked as a duplicate of this bug. ***